add scholarship and project

--- a/zjs-en.tex
+++ b/zjs-en.tex
@@ -34,13 +34,22 @@
 \maketitle
 
 \section{Education}
-\cventry{2010--Present}{Undergraduate}{Shanghai JiaoTong University}{expected 2014}{}
+%%\cventry{2010--Present}{Undergraduate}{Shanghai JiaoTong University}{expected 2014}{}
+\cventry{2010--2014}{Undergraduate}{Shanghai JiaoTong University}{}{}
 {
 \begin{itemize}
 \item \textbf{Major}: Computer Science and Engineering
 \item \textbf{MajorCourse/Score}: Algorithm and Complexity(96), Discrete Mathematics(98), Operating System(93), Compiler(90), Computer architecture(91), Computer Organization Experiment(92), C++ programming(91), Linear Algebra(94), Artificial Intelligence(93), Computer Network(92), Database(90) and so on.\\
 \end{itemize}
 }
+\cventry{2014--2017}{Graduate}{Shanghai JiaoTong University}{}{}
+{
+\begin{itemize}
+\item \textbf{Major}: Computer Science and Engineering
+\end{itemize}
+}
+
+%\section{Master thesis}
 
 
 %\section{Master thesis}
@@ -54,9 +63,10 @@
 %\cventry{MindBlog}{\url{http://zyearn.github.io}}{}{}{}{}
 \cventry{Blog}{http://www.lifeofzjs.com}{}{}{}{}
 \cventry{OldBlog}{http://blog.csdn.net/Zyearn}{}{}{}{}
+\cventry{Github}{https://github.com/zyearn}{}{}{}{}
 
 \section{Academic Experience}
-\cventry{2012.7--present}{Research Assistant}{Wireless network Research Group}{Advanced Network Lab(ANL)}{}
+\cventry{2012.7--2013.7}{Research Assistant}{Wireless network Research Group}{Advanced Network Lab(ANL)}{}
 {
 \begin{itemize}
 \item Advisor: \href{http://www.cs.sjtu.edu.cn/~fwu/index.html}{Fan Wu(http://www.cs.sjtu.edu.cn/~fwu/index.html)}
@@ -66,24 +76,42 @@
 
 
 \section{Internship Experience}
-\cventry{2013.8--present}{Shanghai YiTu Network Technology Co., Ltd}{}{}{}
+\cventry{2013.8--2014.2}{Shanghai YiTu Network Technology Co., Ltd}{}{}{}
 {
 \begin{itemize}
-\item Position: Software Engineer(Intern)
+\item Position: Software Engineer
 \end{itemize}
 }
 
 \section{Project Experience}
 %% \subsection{Research Projects}
 
+\cventry{2013.12--2014.2}
+{Design API and implement SDK of services provided by intern company}
+{C++}
+{company Projoct}
+{}
+{
+Costomers need a interface to access services provided by company. My task is to design API and to implement it robustly in C++. 
+}
+
+\vspace*{0.2\baselineskip}
+\cventry{2013.8--2013.9}
+{Refactor Code from CImg to OpenCV}
+{C++}
+{company Projoct}
+{}
+{
+OpenCV is more suitable and efficient than CImg in our system. My task is refactoring the code from CImg to OpenCV.
+}
+
+\vspace*{0.2\baselineskip}
 \cventry{2012.10--2013.1}
 {WordTerminator}
 {Html, Javascript}
 {Course Project}
 {Score:95/100}
 {
-Many people are tired with the traditional way of learning English words.
-For example, using a vocabulary book or software tools.
 WordTerminator is a game, aiming at providing funny experience for users while maintaining the functionality of memorizing English Word.
 It is a great idea that combine learning words with game.\\
 %Here is the game demo: \url{http://zjsblog.com/wordTerminator/index.html}\\
@@ -96,11 +124,7 @@ It is a great idea that combine learning words with game.\\
 {Course Project}
 {Score:95/100}
 {
-This project aims at\\
-1) using Java to write Andriod applications\\
-2) using Bluetooth API to implement wireless communication\\
-3) writing singlechip program to receive the message from the phone\\
-4) according to the message received, drive the toy car to move\\
+This project aims at 1.using Java to write Andriod applications, 2. using Bluetooth API to implement wireless communication, 3.writing singlechip program to receive the message from the phone, 4.according to the message received, drive the toy car to move.\\
 }
 
 \vspace*{0.2\baselineskip}
@@ -140,19 +164,17 @@ calculation, drawing a graph and calculous(integration and derivation).We also u
 }
 
 \section{Awards}
+\cventry{2013}{Shanghai Jiaotong University scholarship}{}{}{}{}
 \cventry{2013}{First prize in CCF Hackathon at Shanghai Jiaotong University}{}{}{}{}
-\cventry{2011}{Shanghai Jiaotong University scholarship class C}{}{}{}{}
+\cventry{2011}{Shanghai Jiaotong University scholarship}{}{}{}{}
 \cventry{2011}{Excellent cadre in Shanghai JiaoTong University Youth League Committee}{}{}{}{}
-\cventry{2010}{Third Prize in Shanghai Physics Competetion}{}{}{}{}
-\cventry{2009}{Wanshida Schloarship(top 1\%)}{}{}{}{}
-\cventry{2008}{Wanshida Schloarship(top 1\%)}{}{}{}{}
 
 \section{Standardized Test}
 \cventry{CET 6}{559}{}{}{}{}
 
 
 \section{Skills}
-\cventry{Languages}{C++/C > Python > Matlab > Shell > Java}{}{}{}{}
+\cventry{Languages}{C++/C > Python > Shell > Java > prolog}{}{}{}{}
 \cventry{Document}{LaTex, Vim, Gnuplot}{}{}{}{}
 \cventry{Tools}{Git, Linux}{}{}{}{}
 %\cventry{Games}{Warcraft 3}{}{}{}{}
