--- a/zjs-en.tex
+++ b/zjs-en.tex
@@ -39,10 +39,11 @@
 {
 \begin{itemize}
 \item \textbf{Major}: Computer Science and Engineering
-\item \textbf{MajorCourse/Score}: Algorithm and Complexity(96), Discrete Mathematics(98), Operating System(93), Compiler(90), Computer architecture(91), Computer Organization Experiment(92), C++ programming(91), Linear Algebra(94), Artificial Intelligence(93), Computer Network(92), Database(90) and so on.\\
+\item \textbf{Rank}: 21/122
+%\item \textbf{MajorCourse/Score}: Algorithm and Complexity(96), Discrete Mathematics(98), Operating System(93), Compiler(90), Computer architecture(91), Computer Organization Experiment(92), C++ programming(91), Linear Algebra(94), Artificial Intelligence(93), Computer Network(92), Database(90) and so on.\\
 \end{itemize}
 }
-\cventry{2014--2017}{Graduate}{Shanghai JiaoTong University}{}{}
+\cventry{2014--present}{Graduate}{Shanghai JiaoTong University}{}{}
 {
 \begin{itemize}
 \item \textbf{Major}: Computer Science and Engineering
@@ -50,7 +51,6 @@
 }
 
 %\section{Master thesis}
-
 
 %\section{Master thesis}
 %\cvline{title}{\emph{Title}}
@@ -61,31 +61,58 @@
 \section{Community}
 %\cventry{TechBlog}{\href{http://blog.csdn.net/Zyearn}}{}{}{}{}
 %\cventry{MindBlog}{\url{http://zyearn.github.io}}{}{}{}{}
-\cventry{Blog}{http://www.lifeofzjs.com}{}{}{}{}
+\cventry{Blog}{http://lifeofzjs.com}{}{}{}{}
 \cventry{OldBlog}{http://blog.csdn.net/Zyearn}{}{}{}{}
-\cventry{Github}{https://github.com/zyearn}{}{}{}{}
+%\cventry{Github}{https://github.com/zyearn}{}{}{}{}
 
-\section{Academic Experience}
-\cventry{2012.7--2013.7}{Research Assistant}{Wireless network Research Group}{Advanced Network Lab(ANL)}{}
-{
-\begin{itemize}
-\item Advisor: \href{http://www.cs.sjtu.edu.cn/~fwu/index.html}{Fan Wu(http://www.cs.sjtu.edu.cn/~fwu/index.html)}
-\item interest: Mechanism Design and Privacy-preserving issues in Network
-\end{itemize}
-}
+%\section{Academic Experience}
+%\cventry{2012.7--2013.7}{Research Assistant}{Wireless network Research Group}{Advanced Network Lab(ANL)}{}
+%{
+%\begin{itemize}
+%\item Advisor: \href{http://www.cs.sjtu.edu.cn/~fwu/index.html}{Fan Wu(http://www.cs.sjtu.edu.cn/~fwu/index.html)}
+%\item interest: Mechanism Design and Privacy-preserving issues in Network
+%\end{itemize}
+%}
 
 
 \section{Internship Experience}
+\cventry{2014.6--present}{INESA Holding Group R\&D Center}{}{}{}
+{
+\begin{itemize}
+\item Position: Front-end/Back-end Software Engineer
+\end{itemize}
+}
+
 \cventry{2013.8--2014.2}{Shanghai YiTu Network Technology Co., Ltd}{}{}{}
 {
 \begin{itemize}
-\item Position: Software Engineer
+\item Position: Linux C++ Software Engineer
 \end{itemize}
 }
 
 \section{Project Experience}
 %% \subsection{Research Projects}
+\vspace*{0.2\baselineskip}
+\cventry{2014.6--2014.9}
+{Smart Lighting system}
+{php, javascrit, Nodejs}
+{company Project}
+{}
+{
+This project focuses on controlling lights more smartly, such as adjusting the lightness, brightness, color temperature, on or off on the web pages. 
+}
 
+\vspace*{0.2\baselineskip}
+\cventry{2014.3--2014.6}
+{Design and implement the data deduplication system based on FFT}
+{NodeJs, javascrit, C++}
+{Bachelor Thesis Project}
+{}
+{
+This project is the system implementation of my bachelor thesis. Front end is written by html and bootstrap. NodeJs is used as Server, and I use C++ to do the main calculation to accelerate the process.
+}
+
+\vspace*{0.2\baselineskip}
 \cventry{2013.12--2014.2}
 {Design API and implement SDK of services provided by intern company}
 {C++}
@@ -174,7 +201,7 @@ calculation, drawing a graph and calculous(integration and derivation).We also u
 
 
 \section{Skills}
-\cventry{Languages}{C++/C > Python > Shell > Java > prolog}{}{}{}{}
+\cventry{Languages}{C++/C > Javascript > Python > Shell > Prolog}{}{}{}{}
 \cventry{Document}{LaTex, Vim, Gnuplot}{}{}{}{}
 \cventry{Tools}{Git, Linux}{}{}{}{}
 %\cventry{Games}{Warcraft 3}{}{}{}{}
