add some experience

--- a/zjs-cn.tex
+++ b/zjs-cn.tex
@@ -24,7 +24,7 @@
 % personal data
 \firstname{朱佳顺}
 \familyname{}
-\title{}               % optional, remove the line if not wanted
+\title{简历}               % optional, remove the line if not wanted
 
 \mobile{+86 13764325590}                    % optional, remove the line if not wanted
 \email{zhujiashun2010@gmail.com}                      % optional, remove the line if not wanted
@@ -37,11 +37,19 @@
 \maketitle
 
 \section{教育背景}
-\cventry{2010--至今}{本科生}{上海交通大学}{将于 2014 年毕业}{}
+\cventry{2010--2014}{本科生}{上海交通大学}{}{}
 {
 \begin{itemize}
 \item \textbf{专业}: 计算机科学与技术
-\item \textbf{部分专业课程/分}: 算法与复杂性(96), 离散数学(98), 操作系统(93), 编译原理(90), 计算机体系结构(91), 计算机组成实验(92), C++程序设计(91), 线性代数(94), 人工智能(93), 计算机网络(92), 数据库(90) and so on.\\
+%\item \textbf{部分专业课程/分}: 算法与复杂性(96), 离散数学(98), 操作系统(93), 编译原理(90), 计算机体系结构(91), 计算机组成实验(92), C++程序设计(91), 线性代数(94), 人工智能(93), 计算机网络(92), 数据库(90) and so on.\\
+\end{itemize}
+}
+
+
+\cventry{2014--至今}{硕士}{上海交通大学}{将于2017.03毕业}{}
+{
+\begin{itemize}
+\item \textbf{专业}: 计算机科学与技术
 \end{itemize}
 }
 
@@ -53,52 +61,98 @@
 
 
 \section{社区}
-\cventry{技术博客}{\url{http://blog.csdn.net/Zyearn}}{}{}{}{}
-\cventry{心情博客}{\url{http://zyearn.github.com}}{}{}{}{}
+\cventry{博客}{\url{http://www.lifeofzjs.com}}{}{}{}{}
+\cventry{github}{\url{https://www.github.com/zyearn}}{}{}{}{}
 
 \section{学术经历}
-\cventry{2012.7--至今}{研究助理}{无线网络研究组}{Advanced Network Lab(ANL)}{}
+\cventry{2013.9--至今}{研究助理}{可靠分布式系统实验室}{}{}
 {
 \begin{itemize}
-\item 导师: \href{http://www.cs.sjtu.edu.cn/~fwu/index.html}{吴帆}(fwu@sjtu.edu.cn)
-\item 研究兴趣: 网络中的隐私保护
+%\item 导师: \href{http://www.cs.sjtu.edu.cn/~fwu/index.html}{吴帆}(fwu@sjtu.edu.cn)
+\item \textbf{研究方向}: 内存计算、操作系统相关
 \end{itemize}
 }
 
 \section{实习经历}
-\cventry{2013.8--至今}{上海依图网络有限公司}{}{}{}
+\cventry{2014.6--2014.11}{上海仪电控股（集团）公司}{}{}{}
 {
 \begin{itemize}
-\item 职位: 软件工程师
+\item 职位: 前端/后端工程师
 \end{itemize}
 }
 
+\cventry{2013.8--2014.2}{上海依图科技网络有限公司}{}{}{}
+{
+\begin{itemize}
+\item 职位: Linux C++ 软件工程师
+\end{itemize}
+}
+
+
 \section{项目经历}
 %% \subsection{Research Projects}
-
-\cventry{2012.10--2013.1}
-{单词终结者}
-{Html, Javascript}
-{课程设计}
-{Score:95/100}
+\cventry{2014.10-2014.12}
+{CE在线 www.ece114.com}
+{html, javascript, nodejs, express, mysql}
+{outsourcing Project}
+{}
 {
-越来越多的人疲倦于传统的背单词方式，比如说单词书或者电脑软件。
-单词终终结者是一款致力于将乐趣溶于单词学习中的网页游戏。将学习单词和游戏相结合是一个很好的创意。\\
+这个项目我们为一个创业团队写了一个元器件领域中的门户网站。后端我们用了NodeJs的Express框架，它具有易开发，中间件功能强大的特点。数据库用了mysql。我的工作是前端开发，后端开发和数据库开发。\\
 }
 
 \vspace*{0.2\baselineskip}
-\cventry{2012.9--2012.12}
-{用安卓程序和蓝牙控制小车}
-{Java}
-{课程设计}
-{Score:95/100}
+\cventry{2014.6--2014.10}
+{智能照明系统}
+{php, javascrit, nodejs, socket.io}
+{company Project}
+{}
 {
-这个项目致力于：\\
-1) 用JAVA写安卓程序\\
-2) 用蓝牙API来实现无线传输\\
-3) 写单片机程序来接受从手机传来的信号\\
-4) 根据接受的信号，驱动小车运动\\
+这个项目致力于让灯具的操作更加方便和人性化，比如在网页上调整灯具的亮度、色温、开关等。我的主要工作是开发后台网页(php)，实时推送(nodejs)和前端开发(js)。\\
 }
+
+\vspace*{0.2\baselineskip}
+\cventry{2013.12--2014.2}
+{为公司对外服务设计API和实现sdk}
+{C++}
+{company Projoct}
+{}
+{
+顾客需要一个简单易用的sdk来接入我们对外提供服务。我的主要工作是设计API和用C++实现sdk。难点在于API的简单清晰，实现的健壮性，处理不同的可能错误。\\
+}
+
+\vspace*{0.2\baselineskip}
+\cventry{2013.8--2013.12}
+{车牌智能识别项目}
+{C++}
+{company Projoct}
+{}
+{
+这个项目主要做车牌的智能识别。我负责工程部分（非机器识别算法）的一部分开发，以及工作进程间是如何组织和架构，涉及Linux下C++多线程开发。\\
+}
+
+%\cventry{2012.10--2013.1}
+%{单词终结者}
+%{Html, Javascript}
+%{课程设计}
+%{Score:95/100}
+%{
+%越来越多的人疲倦于传统的背单词方式，比如说单词书或者电脑软件。
+%单词终终结者是一款致力于将乐趣溶于单词学习中的网页游戏。将学习单词和游戏相结合是一个很好的创意。\\
+%}
+
+%\vspace*{0.2\baselineskip}
+%\cventry{2012.9--2012.12}
+%{用安卓程序和蓝牙控制小车}
+%{Java}
+%{课程设计}
+%{Score:95/100}
+%{
+%这个项目致力于：\\
+%1) 用JAVA写安卓程序\\
+%2) 用蓝牙API来实现无线传输\\
+%3) 写单片机程序来接受从手机传来的信号\\
+%4) 根据接受的信号，驱动小车运动\\
+%}
 
 \vspace*{0.2\baselineskip}
 \cventry{2012.10-2012.12}
@@ -110,13 +164,14 @@
 这个项目包含了高级语言如何编译成汇编语言的全部过程。我担任整个项目的设计者和实现者，其中包括了词法分析，语法分析，语义分析，中间代码生成，优化和最终代码生成。\\
 }
 
+\vspace*{0.2\baselineskip}
 \cventry{2012.4--2012.6}
 {为操作系统实现文件系统}
 {C, linux}
 {课程设计}
 {Score:93/100}
 {
-用C实现一个文件系统。真实硬盘用来模拟虚拟硬盘。设计原理是运用Inode，对于文件系统这是一个极好的数据结构。\\
+用C实现一个文件系统。真实硬盘用来模拟虚拟硬盘。设计原理是运用Inode，我的主要任务是设计和实现一个简易文件系统，支持一般操作比如ls,cd和编辑文件。\\
 }
 
 
@@ -132,19 +187,18 @@
 }
 
 \section{奖项}
-\cventry{2013}{CCF编程马拉松 一等奖}{}{}{}{}
-\cventry{2011}{上海交通大学奖学金 C类}{}{}{}{}
+\cventry{2013}{上海交通大学奖学金}{}{}{}{}
+\cventry{2013}{第一届上海交大CCF编程马拉松 一等奖}{}{}{}{}
+\cventry{2011}{上海交通大学奖学金}{}{}{}{}
 \cventry{2011}{上海交通大学校团委优秀干事、主任}{}{}{}{}
 \cventry{2010}{上海市第四届物理竞赛 三等奖}{}{}{}{}
-\cventry{2009}{万时达奖学金(top 1\%)}{}{}{}{}
-\cventry{2008}{万时达奖学金(top 1\%)}{}{}{}{}
 
 \section{英语能力}
 \cventry{CET 6}{559}{}{}{}{}
 
 
 \section{技能}
-\cventry{Languages}{C++/C > python >  Java}{}{}{}{}
+\cventry{Languages}{C, C++, Javascript, Python, Shell}{}{}{}{}
 \cventry{Document}{LaTex, Vim, Gnuplot, Word, Excel, PowerPoint}{}{}{}{}
 \cventry{Tools}{Git, Linux}{}{}{}{}
 %\cventry{Games}{Warcraft 3}{}{}{}{}
