--- a/zjs-en.tex
+++ b/zjs-en.tex
@@ -39,7 +39,7 @@
 {
 \begin{itemize}
 \item \textbf{Major}: Computer Science and Engineering
-\item \textbf{Rank}: 21/122
+%\item \textbf{Rank}: 21/122
 %\item \textbf{MajorCourse/Score}: Algorithm and Complexity(96), Discrete Mathematics(98), Operating System(93), Compiler(90), Computer architecture(91), Computer Organization Experiment(92), C++ programming(91), Linear Algebra(94), Artificial Intelligence(93), Computer Network(92), Database(90) and so on.\\
 \end{itemize}
 }
@@ -61,22 +61,22 @@
 \section{Community}
 %\cventry{TechBlog}{\href{http://blog.csdn.net/Zyearn}}{}{}{}{}
 %\cventry{MindBlog}{\url{http://zyearn.github.io}}{}{}{}{}
-\cventry{Blog}{http://lifeofzjs.com}{}{}{}{}
-\cventry{OldBlog}{http://blog.csdn.net/Zyearn}{}{}{}{}
-%\cventry{Github}{https://github.com/zyearn}{}{}{}{}
+\cventry{Blog}{http://www.lifeofzjs.com}{}{}{}{}
+%\cventry{OldBlog}{http://blog.csdn.net/Zyearn}{}{}{}{}
+\cventry{Github}{https://github.com/zyearn}{}{}{}{}
 
-%\section{Academic Experience}
-%\cventry{2012.7--2013.7}{Research Assistant}{Wireless network Research Group}{Advanced Network Lab(ANL)}{}
-%{
-%\begin{itemize}
+\section{Academic Experience}
+\cventry{2013.9--now}{Research Assistant}{Reliable adaptive distributed systems laboratory}{}{}
+{
+\begin{itemize}
 %\item Advisor: \href{http://www.cs.sjtu.edu.cn/~fwu/index.html}{Fan Wu(http://www.cs.sjtu.edu.cn/~fwu/index.html)}
-%\item interest: Mechanism Design and Privacy-preserving issues in Network
-%\end{itemize}
-%}
+    \item \textbf{interest}: Memory computing, Operating system.
+\end{itemize}
+}
 
 
 \section{Internship Experience}
-\cventry{2014.6--present}{INESA Holding Group R\&D Center}{}{}{}
+\cventry{2014.6--2014.11}{INESA Holding Group R\&D Center}{}{}{}
 {
 \begin{itemize}
 \item Position: Front-end/Back-end Software Engineer
@@ -92,6 +92,15 @@
 
 \section{Project Experience}
 %% \subsection{Research Projects}
+\cventry{2014.10-2014.12}
+{CE Online www.ece114.com}
+{html, javascript, nodejs, express, mysql}
+{outsourcing Project}
+{}
+{
+This project is aimed at writing a portals website of electron component for a startup team. In the back end, we use NodeJs framework, express, which is easy to develop and powerful in middleware. We use mysql as our database. My job acts as a front-end/back-end engineer and also develops database program.\\
+}
+
 \vspace*{0.2\baselineskip}
 \cventry{2014.6--2014.9}
 {Smart Lighting system}
@@ -99,18 +108,18 @@
 {company Project}
 {}
 {
-This project focuses on controlling lights more smartly, such as adjusting the lightness, brightness, color temperature, on or off on the web pages. 
+This project focuses on controlling lights more smartly, such as adjusting brightness, color temperature, on or off on the web pages.  My job is mainly involved in web develop, notification push in real time and front-end development.\\
 }
 
-\vspace*{0.2\baselineskip}
-\cventry{2014.3--2014.6}
-{Design and implement the data deduplication system based on FFT}
-{NodeJs, javascrit, C++}
-{Bachelor Thesis Project}
-{}
-{
-This project is the system implementation of my bachelor thesis. Front end is written by html and bootstrap. NodeJs is used as Server, and I use C++ to do the main calculation to accelerate the process.
-}
+%\vspace*{0.2\baselineskip}
+%\cventry{2014.3--2014.6}
+%{Design and implement the data deduplication system based on FFT}
+%{NodeJs, javascrit, C++}
+%{Bachelor Thesis Project}
+%{}
+%{
+%This project is the system implementation of my bachelor thesis. Front end is written by html and bootstrap. NodeJs is used as Server, and I use C++ to do the main calculation to accelerate the process.
+%}
 
 \vspace*{0.2\baselineskip}
 \cventry{2013.12--2014.2}
@@ -119,40 +128,49 @@ This project is the system implementation of my bachelor thesis. Front end is wr
 {company Projoct}
 {}
 {
-Costomers need a interface to access services provided by company. My task is to design API and to implement it robustly in C++. 
+Costomers need a interface to access services provided by company. My task is to design API and to implement it robustly in C++.\\
 }
 
 \vspace*{0.2\baselineskip}
-\cventry{2013.8--2013.9}
-{Refactor Code from CImg to OpenCV}
+\cventry{2013.8--2013.12}
+{Car plate number recognition system}
 {C++}
 {company Projoct}
 {}
 {
-OpenCV is more suitable and efficient than CImg in our system. My task is refactoring the code from CImg to OpenCV.
+    This project aimed at recognition of car number plate. I'm responsible for a part of the engineering development(not the recognition algorithm). My job is to write robust C++ code under Linux multi-threaded environment. \\
 }
-
-\vspace*{0.2\baselineskip}
-\cventry{2012.10--2013.1}
-{WordTerminator}
-{Html, Javascript}
-{Course Project}
-{Score:95/100}
-{
-WordTerminator is a game, aiming at providing funny experience for users while maintaining the functionality of memorizing English Word.
-It is a great idea that combine learning words with game.\\
-%Here is the game demo: \url{http://zjsblog.com/wordTerminator/index.html}\\
-}
-
-\vspace*{0.2\baselineskip}
-\cventry{2012.9--2012.12}
-{Control toy car using Andriod program and Bluetooth}
-{Java}
-{Course Project}
-{Score:95/100}
-{
-This project aims at 1.using Java to write Andriod applications, 2. using Bluetooth API to implement wireless communication, 3.writing singlechip program to receive the message from the phone, 4.according to the message received, drive the toy car to move.\\
-}
+%\vspace*{0.2\baselineskip}
+%\cventry{2013.8--2013.9}
+%{Refactor Code from CImg to OpenCV}
+%{C++}
+%{company Projoct}
+%{}
+%{
+%OpenCV is more suitable and efficient than CImg in our system. My task is refactoring the code from CImg to OpenCV.
+%}
+%
+%\vspace*{0.2\baselineskip}
+%\cventry{2012.10--2013.1}
+%{WordTerminator}
+%{Html, Javascript}
+%{Course Project}
+%{Score:95/100}
+%{
+%WordTerminator is a game, aiming at providing funny experience for users while maintaining the functionality of memorizing English Word.
+%It is a great idea that combine learning words with game.\\
+%%Here is the game demo: \url{http://zjsblog.com/wordTerminator/index.html}\\
+%}
+%
+%\vspace*{0.2\baselineskip}
+%\cventry{2012.9--2012.12}
+%{Control toy car using Andriod program and Bluetooth}
+%{Java}
+%{Course Project}
+%{Score:95/100}
+%{
+%This project aims at 1.using Java to write Andriod applications, 2. using Bluetooth API to implement wireless communication, 3.writing singlechip program to receive the message from the phone, 4.according to the message received, drive the toy car to move.\\
+%}
 
 \vspace*{0.2\baselineskip}
 \cventry{2012.10-2012.12}
@@ -201,7 +219,7 @@ calculation, drawing a graph and calculous(integration and derivation).We also u
 
 
 \section{Skills}
-\cventry{Languages}{C++/C > Javascript > Python > Shell > Prolog}{}{}{}{}
+\cventry{Languages}{C, C++, Javascript, Python, Shell}{}{}{}{}
 \cventry{Document}{LaTex, Vim, Gnuplot}{}{}{}{}
 \cventry{Tools}{Git, Linux}{}{}{}{}
 %\cventry{Games}{Warcraft 3}{}{}{}{}
