--- a/zjs-cn.tex
+++ b/zjs-cn.tex
@@ -27,7 +27,7 @@
 \title{简历}               % optional, remove the line if not wanted
 
 \mobile{+86 13764325590}                    % optional, remove the line if not wanted
-\email{zhujiashun2010@gmail.com}                      % optional, remove the line if not wanted
+\email{zhujiashun\_2007@126.com}                      % optional, remove the line if not wanted
 %% \quote{\small{``Do what you fear, and the death of fear is certain.''\\-- Anthony Robbins}}
 
 \nopagenumbers{}
