--- a/zjs-en.tex
+++ b/zjs-en.tex
@@ -76,29 +76,34 @@
 
 
 \section{Internship Experience}
-\cventry{2014.6--2014.11}{INESA Holding Group R\&D Center}{}{}{}
+%SSG STO Big Data Technology
+%Intel Asia-Pacific Research & Development Ltd.
+
+\cventry{2014.6--2014.12}{INESA Holding Group R\&D Center}{}{}{}
 {
 \begin{itemize}
-\item Position: Front-end/Back-end Software Engineer
+\item Position: Front-end/Back-end Software Engineer\\
+I was involved with the development of back-end server using php/NodeJS and front-end parts using javascript/html/css.
 \end{itemize}
 }
 
 \cventry{2013.8--2014.2}{Shanghai YiTu Network Technology Co., Ltd}{}{}{}
 {
 \begin{itemize}
-\item Position: Linux C++ Software Engineer
+\item Position: Linux C++ Software Engineer\\
+I was responsible for the architecture design and implementation with the purpose of efficiency. Since it is a startup company, I learned many other valuable things other than professional skills, i.e., some standards to develop programs, what is important in working and so on.
 \end{itemize}
 }
 
 \section{Project Experience}
 %% \subsection{Research Projects}
 \cventry{2014.10-2014.12}
-{CE Online www.ece114.com}
+{CE Online}
 {html, javascript, nodejs, express, mysql}
 {outsourcing Project}
 {}
 {
-This project is aimed at writing a portals website of electron component for a startup team. In the back end, we use NodeJs framework, express, which is easy to develop and powerful in middleware. We use mysql as our database. My job acts as a front-end/back-end engineer and also develops database program.\\
+This project is aimed at writing a portals website of electron component for a startup team. In the back end, we use NodeJS framework, express, which is easy to develop and powerful in middleware. We use mysql as our database. My job acts as a front-end/back-end engineer and also develops database program.\\
 }
 
 \vspace*{0.2\baselineskip}
@@ -128,7 +133,7 @@ This project focuses on controlling lights more smartly, such as adjusting brigh
 {company Projoct}
 {}
 {
-Costomers need a interface to access services provided by company. My task is to design API and to implement it robustly in C++.\\
+Customers need an interface to access services provided by company. My task is to design API and to implement it robustly in C++.\\
 }
 
 \vspace*{0.2\baselineskip}
@@ -200,7 +205,7 @@ Using C writing a FileSystem. Big file in the real disk are used to simulate the
 \cventry{2011.10--2012.2}
 {Graphic calculator}
 {Python}
-{Couese Project}
+{Course Project}
 {Score:28/30}
 {
 This project aims at developing a powerful and easy-to-use calculator.We support the function of basic
@@ -219,9 +224,9 @@ calculation, drawing a graph and calculous(integration and derivation).We also u
 
 
 \section{Skills}
-\cventry{Languages}{C, C++, Javascript, Python, Shell}{}{}{}{}
-\cventry{Document}{LaTex, Vim, Gnuplot}{}{}{}{}
-\cventry{Tools}{Git, Linux}{}{}{}{}
+\cventry{Language/Platform}{C, C++, NodeJS/Javascript, Python, HTML/CSS, Shell}{}{}{}{}
+\cventry{Document}{LaTex, Vim}{}{}{}{}
+\cventry{Tools}{Git, MacOSX/Linux}{}{}{}{}
 %\cventry{Games}{Warcraft 3}{}{}{}{}
 
 % \closesection{}                   % needed to renewcommands
