--- a/zjs-cn.tex
+++ b/zjs-cn.tex
@@ -27,7 +27,7 @@
 \title{简历}               % optional, remove the line if not wanted
 
 \mobile{+86 13764325590}                    % optional, remove the line if not wanted
-\email{zhujiashun\_2007@126.com}                      % optional, remove the line if not wanted
+\email{zhujiashun2010@gmail.com}                      % optional, remove the line if not wanted
 %% \quote{\small{``Do what you fear, and the death of fear is certain.''\\-- Anthony Robbins}}
 
 \nopagenumbers{}
@@ -74,10 +74,11 @@
 }
 
 \section{实习经历}
-\cventry{2014.6--2014.11}{上海仪电控股（集团）公司}{}{}{}
+\cventry{2014.6--2014.12}{上海仪电控股（集团）公司}{}{}{}
 {
 \begin{itemize}
-\item 职位: 前端/后端工程师
+\item 职位: 前端/后端工程师\\
+我主要负责项目网站的部分前端和部分后端开发，前端用javascript/html/css，后端用Nodejs。
 \end{itemize}
 }
 
@@ -85,6 +86,7 @@
 {
 \begin{itemize}
 \item 职位: Linux C++ 软件工程师
+我主要负责部分架构的设计和程序的实现。这是一个创业公司，我学到了很多比专业技能更宝贵的事情，比如一些做事的标准，怎么合作等等。
 \end{itemize}
 }
 
@@ -92,7 +94,7 @@
 \section{项目经历}
 %% \subsection{Research Projects}
 \cventry{2014.10-2014.12}
-{CE在线 www.ece114.com}
+{CE在线}
 {html, javascript, nodejs, express, mysql}
 {outsourcing Project}
 {}
@@ -198,13 +200,13 @@
 
 
 \section{技能}
-\cventry{Languages}{C, C++, Javascript, Python, Shell}{}{}{}{}
-\cventry{Document}{LaTex, Vim, Gnuplot, Word, Excel, PowerPoint}{}{}{}{}
-\cventry{Tools}{Git, Linux}{}{}{}{}
+\cventry{Language/Platform}{C, C++, NodeJs/Javascript, Python, Shell}{}{}{}{}
+\cventry{Document}{LaTex, Vim}{}{}{}{}
+\cventry{Tools}{Git, MacOSX/Linux}{}{}{}{}
 %\cventry{Games}{Warcraft 3}{}{}{}{}
 % \cvline{Photography}{\small Digital photography is my newest hobby.}
 
-\closesection{}                   % needed to renewcommands
-\renewcommand{\listitemsymbol}{-} % change the symbol for lists
+%\closesection{}                   % needed to renewcommands
+%\renewcommand{\listitemsymbol}{-} % change the symbol for lists
 
 \end{document}
