--- a/zjs-cn.tex
+++ b/zjs-cn.tex
@@ -64,16 +64,16 @@
 \cventry{博客}{\url{http://www.lifeofzjs.com}}{}{}{}{}
 \cventry{github}{\url{https://www.github.com/zyearn}}{}{}{}{}
 
-\section{学术经历}
-\cventry{2013.9--至今}{研究助理}{可靠分布式系统实验室}{}{}
+
+\section{实习经历}
+\cventry{2015.6--2015.9}{腾讯科技（深圳）有限公司}{}{}{}
 {
 \begin{itemize}
-%\item 导师: \href{http://www.cs.sjtu.edu.cn/~fwu/index.html}{吴帆}(fwu@sjtu.edu.cn)
-\item \textbf{研究方向}: 内存计算、操作系统相关
+\item 职位: 游戏后端工程师\\
+小型游戏系统
 \end{itemize}
 }
 
-\section{实习经历}
 \cventry{2014.6--2014.12}{上海仪电控股（集团）公司}{}{}{}
 {
 \begin{itemize}
@@ -90,6 +90,14 @@
 \end{itemize}
 }
 
+\section{学术经历}
+\cventry{2013.9--至今}{研究助理}{可靠分布式系统实验室}{}{}
+{
+\begin{itemize}
+%\item 导师: \href{http://www.cs.sjtu.edu.cn/~fwu/index.html}{吴帆}(fwu@sjtu.edu.cn)
+\item \textbf{研究方向}: 内存计算、操作系统相关
+\end{itemize}
+}
 
 \section{项目经历}
 %% \subsection{Research Projects}
@@ -193,14 +201,13 @@
 \cventry{2013}{第一届上海交大CCF编程马拉松 一等奖}{}{}{}{}
 \cventry{2011}{上海交通大学奖学金}{}{}{}{}
 \cventry{2011}{上海交通大学校团委优秀干事、主任}{}{}{}{}
-\cventry{2010}{上海市第四届物理竞赛 三等奖}{}{}{}{}
 
 \section{英语能力}
 \cventry{CET 6}{559}{}{}{}{}
 
 
 \section{技能}
-\cventry{Language/Platform}{C, C++, NodeJs/Javascript, Python, Shell}{}{}{}{}
+\cventry{Language/Platform}{C, C++, NodeJs/Javascript, SQL, Python, Shell}{}{}{}{}
 \cventry{Document}{LaTex, Vim}{}{}{}{}
 \cventry{Tools}{Git, MacOSX/Linux}{}{}{}{}
 %\cventry{Games}{Warcraft 3}{}{}{}{}
