--- a/zjs-en.tex
+++ b/zjs-en.tex
@@ -224,7 +224,7 @@ calculation, drawing a graph and calculous(integration and derivation).We also u
 
 
 \section{Skills}
-\cventry{Language/Platform}{C, C++, NodeJS/Javascript, Python, HTML/CSS, Shell}{}{}{}{}
+\cventry{Language/Platform}{C, C++, NodeJS/Javascript, SQL, Python, HTML/CSS, Shell}{}{}{}{}
 \cventry{Document}{LaTex, Vim}{}{}{}{}
 \cventry{Tools}{Git, MacOSX/Linux}{}{}{}{}
 %\cventry{Games}{Warcraft 3}{}{}{}{}
