--- a/zjs-cn.tex
+++ b/zjs-cn.tex
@@ -41,24 +41,23 @@
 {
 \begin{itemize}
 \item \textbf{专业}: 计算机科学与技术
+\item \textbf{排名}: 21/122
 %\item \textbf{部分专业课程/分}: 算法与复杂性(96), 离散数学(98), 操作系统(93), 编译原理(90), 计算机体系结构(91), 计算机组成实验(92), C++程序设计(91), 线性代数(94), 人工智能(93), 计算机网络(92), 数据库(90) and so on.\\
 \end{itemize}
 }
 
 
-\cventry{2014--至今}{硕士}{上海交通大学}{将于2017.03毕业}{}
+\cventry{2014--至今}{硕士}{上海交通大学}{将于2017.02毕业}{}
 {
 \begin{itemize}
 \item \textbf{专业}: 计算机科学与技术
 \end{itemize}
 }
 
-
 %\section{Master thesis}
 %\cvline{title}{\emph{Title}}
 %\cvline{supervisors}{Supervisors}
 %\cvline{description}{\small Short thesis abstract}
-
 
 \section{社区}
 \cventry{博客}{\url{http://www.lifeofzjs.com}}{}{}{}{}
@@ -69,78 +68,97 @@
 \cventry{2015.6--2015.9}{腾讯科技（深圳）有限公司}{}{}{}
 {
 \begin{itemize}
-\item 职位: 游戏后端工程师\\
-小型游戏系统
+\item 职位: 互动娱乐事业群/北极光工作室群/天涯明月刀项目组/服务器组实习工程师\\
+完成了项目组专为实习生设计的一套游戏服务器系统，其中涉及到玩家登陆、简单地交互，玩家下线以及数据持久化等过程；学习并实现游戏服务器基本的架构。
 \end{itemize}
 }
 
-\cventry{2014.6--2014.12}{上海仪电控股（集团）公司}{}{}{}
+\cventry{2014.7--2014.11}{上海仪电控股（集团）公司}{}{}{}
 {
 \begin{itemize}
-\item 职位: 前端/后端工程师\\
-我主要负责项目网站的部分前端和部分后端开发，前端用javascript/html/css，后端用Nodejs。
+\item 职位: 前端/后端 实习工程师\\
+帮助项目网站的前端和后端开发，前端涉及页面开发和实现与后端交互的接口；后端涉及NodeJS的开发。
 \end{itemize}
 }
 
 \cventry{2013.8--2014.2}{上海依图科技网络有限公司}{}{}{}
 {
 \begin{itemize}
-\item 职位: Linux C++ 软件工程师
-我主要负责部分架构的设计和程序的实现。这是一个创业公司，我学到了很多比专业技能更宝贵的事情，比如一些做事的标准，怎么合作等等。
+\item 职位: Linux C++ 实习工程师\\
+负责部分后台进程架构的设计和程序的实现。这是我第一份实习，学到了很多比专业技能更宝贵的事情，比如一些做事的标准、流程，如何沟通，合作等。
 \end{itemize}
 }
 
-\section{学术经历}
-\cventry{2013.9--至今}{研究助理}{可靠分布式系统实验室}{}{}
-{
-\begin{itemize}
+%\section{学术经历}
+%\cventry{2013.9--至今}{研究助理}{可靠分布式系统实验室}{}{}
+%{
+%\begin{itemize}
 %\item 导师: \href{http://www.cs.sjtu.edu.cn/~fwu/index.html}{吴帆}(fwu@sjtu.edu.cn)
-\item \textbf{研究方向}: 内存计算、操作系统相关
-\end{itemize}
-}
+%\item \textbf{研究方向}: 内存计算、操作系统相关
+%\end{itemize}
+%}
 
 \section{项目经历}
 %% \subsection{Research Projects}
+\cventry{2015--至今}
+{Zaver}
+{yet another fast and efficient HTTP server}
+{开源项目}
+{}
+{
+\begin{itemize}
+    \item 项目地址: \url{https://github.com/zyearn/zaver}
+\end{itemize}
+Zaver的目的是帮助开发者理解基于epoll的高性能服务器是如何开发的。Nginx是一个非常好的服务器开发学习范例，但是它的规模之大让许多人望而却步。Zaver用非常少的代码展示了像Nginx这类高性能服务器的核心结构，为开发者进一步学习网络编程打下基础。
+}
+\vspace*{0.2\baselineskip}
+
+\cventry{2015.12--2016.3}
+{JOS}
+{一个操作系统内核}
+{课程项目}
+{}
+{
+\begin{itemize}
+    \item 项目地址: \url{https://github.com/zyearn/6.828-labs}
+\end{itemize}
+这个项目是MIT操作系统课程6.828的大作业，一步步实现一个麻雀Exokernel内核。我主要实现了内存管理、进程、异常/中断、系统调用、页中断、多核支持、调度器、COWfork、抢占式内核、IPC、文件系统、网络支持等内核基本功能。
+}
+\vspace*{0.2\baselineskip}
+
+\cventry{2015.6-2015.9}
+{小型游戏服务器端设计与实现}
+{实习项目}
+{}
+{}
+{
+    //TODO
+}
+\vspace*{0.2\baselineskip}
+
 \cventry{2014.10-2014.12}
 {CE在线}
-{html, javascript, nodejs, express, mysql}
-{outsourcing Project}
+{HTML, Javascript, NodeJS, Express, Mysql}
+{外包项目}
 {}
 {
-这个项目我们为一个创业团队写了一个元器件领域中的门户网站。后端我们用了NodeJs的Express框架，它具有易开发，中间件功能强大的特点。数据库用了mysql。我的工作是前端开发，后端开发和数据库开发。\\
+\begin{itemize}
+    \item 项目地址: \url{http://ece114.com}
+\end{itemize}
+为某创业团队写的一个门户网站。前端涉及页面设计和接口设计；后端用了NodeJS的Express框架，NodeJS对I/O密集型任务有非常好的支持；用mysql作为数据库。我的工作是部分前端开发，后端开发。\\
 }
-
 \vspace*{0.2\baselineskip}
-\cventry{2014.6--2014.10}
-{智能照明系统}
-{php, javascrit, nodejs, socket.io}
-{company Project}
-{}
-{
-这个项目致力于让灯具的操作更加方便和人性化，比如在网页上调整灯具的亮度、色温、开关等。我的主要工作是开发后台网页(php)，实时推送(nodejs)和前端开发(js)。\\
-}
 
-\vspace*{0.2\baselineskip}
-\cventry{2013.12--2014.2}
-{为公司对外服务设计API和实现sdk}
-{C++}
-{company Projoct}
-{}
-{
-顾客需要一个简单易用的sdk来接入我们对外提供服务。我的主要工作是设计API和用C++实现sdk。难点在于API的简单清晰，实现的健壮性，处理不同的可能错误。\\
-}
-
-\vspace*{0.2\baselineskip}
-\cventry{2013.8--2013.12}
-{车牌智能识别项目}
-{C++}
-{company Projoct}
-{}
-{
-这个项目主要做车牌的智能识别。我负责工程部分（非机器识别算法）的一部分开发，以及工作进程间是如何组织和架构，涉及Linux下C++多线程开发。\\
-}
-
+%\cventry{2013.8--2013.12}
+%{车牌智能识别项目}
+%{C++}
+%{company Projoct}
+%{}
+%{
+%这个项目主要做车牌的智能识别。我负责工程部分（非机器识别算法）的一部分开发，以及工作进程间是如何组织和架构，涉及Linux下C++多线程开发。\\
+%}
 %\cventry{2012.10--2013.1}
+
 %{单词终结者}
 %{Html, Javascript}
 %{课程设计}
@@ -149,8 +167,8 @@
 %越来越多的人疲倦于传统的背单词方式，比如说单词书或者电脑软件。
 %单词终终结者是一款致力于将乐趣溶于单词学习中的网页游戏。将学习单词和游戏相结合是一个很好的创意。\\
 %}
-
 %\vspace*{0.2\baselineskip}
+
 %\cventry{2012.9--2012.12}
 %{用安卓程序和蓝牙控制小车}
 %{Java}
@@ -163,44 +181,48 @@
 %3) 写单片机程序来接受从手机传来的信号\\
 %4) 根据接受的信号，驱动小车运动\\
 %}
+%\vspace*{0.2\baselineskip}
 
-\vspace*{0.2\baselineskip}
 \cventry{2012.10-2012.12}
-{实现SmallC的编译器}
-{C, Flex, Bison}
+{SmallC编译器}
+{C, Flex, Bison, Recursive-Descent Parser}
 {课程设计}
-{Score:93/100}
+{}
 {
+\begin{itemize}
+    \item 项目地址: \url{https://github.com/zyearn/SmallC}
+\end{itemize}
 这个项目包含了高级语言如何编译成汇编语言的全部过程。我担任整个项目的设计者和实现者，其中包括了词法分析，语法分析，语义分析，中间代码生成，优化和最终代码生成。\\
 }
-
 \vspace*{0.2\baselineskip}
-\cventry{2012.4--2012.6}
-{为操作系统实现文件系统}
-{C, linux}
-{课程设计}
-{Score:93/100}
-{
-用C实现一个文件系统。真实硬盘用来模拟虚拟硬盘。设计原理是运用Inode，我的主要任务是设计和实现一个简易文件系统，支持一般操作比如ls,cd和编辑文件。\\
-}
+
+%\cventry{2012.4--2012.6}
+%{文件系统设计与实现}
+%{C, linux}
+%{课程设计}
+%{Score:93/100}
+%{
+%用C实现一个文件系统。真实硬盘用来模拟虚拟硬盘。设计原理是运用Inode，我的主要任务是设计和实现一个简易文件系统，支持一般操作比如ls,cd和编辑文件。\\
+%}
 
 
-\vspace*{0.2\baselineskip}
-\cventry{2011.10--2012.2}
-{图形计算器}
-{Python}
-{课程设计}
-{Score:28/30}
-{
-这个项目致力于开发一个强大且易用的计算器。我们支持基础运算，画图和微积分(积分、求导)。我们用图形库实现了用户界面。\\
-这里是demo：\url{http://blog.csdn.net/zyearn/article/details/7282952}
-}
+%\vspace*{0.2\baselineskip}
+%\cventry{2011.10--2012.2}
+%{图形计算器}
+%{Python}
+%{课程设计}
+%{Score:28/30}
+%{
+%这个项目致力于开发一个强大且易用的计算器。我们支持基础运算，画图和微积分(积分、求导)。我们用图形库实现了用户界面。\\
+%这里是demo：\url{http://blog.csdn.net/zyearn/article/details/7282952}
+%}
 
 \section{奖项}
+\cventry{2015}{上海交通大学奖学金}{}{}{}{}
+\cventry{2014}{上海交通大学奖学金}{}{}{}{}
 \cventry{2013}{上海交通大学奖学金}{}{}{}{}
 \cventry{2013}{第一届上海交大CCF编程马拉松 一等奖}{}{}{}{}
 \cventry{2011}{上海交通大学奖学金}{}{}{}{}
-\cventry{2011}{上海交通大学校团委优秀干事、主任}{}{}{}{}
 
 \section{英语能力}
 \cventry{CET 6}{559}{}{}{}{}
@@ -216,4 +238,6 @@
 %\closesection{}                   % needed to renewcommands
 %\renewcommand{\listitemsymbol}{-} % change the symbol for lists
 
+\section{自我评价}
+\cventry{}{TODO}{}{}{}{}
 \end{document}
